can run batch mode active learning: exp v7

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -582,45 +582,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "d652af34-53fd-4322-b6bd-812fe716c3e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                       \\\n",
-       "1                                       \\\n",
-       "2      ['lowest_summed_logvar', 'random']\n",
-       "3      ['lowest_summed_logvar', 'random']\n",
-       "4                                       \\\n",
-       "5                                       \\\n",
-       "6      ['lowest_summed_logvar', 'random']\n",
-       "7      ['lowest_summed_logvar', 'random']\n",
-       "8     ['highest_summed_logvar', 'random']\n",
-       "9     ['highest_summed_logvar', 'random']\n",
-       "10                                      \\\n",
-       "11                                      \\\n",
-       "12     ['lowest_summed_logvar', 'random']\n",
-       "13     ['lowest_summed_logvar', 'random']\n",
-       "14    ['highest_summed_logvar', 'random']\n",
-       "15    ['highest_summed_logvar', 'random']\n",
-       "16    ['highest_summed_logvar', 'random']\n",
-       "17    ['highest_summed_logvar', 'random']\n",
-       "Name: train_final_config.model.supervised_selection_criterion, dtype: object"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df[\"train_final_config.model.supervised_selection_criterion\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "id": "126fdf36-e4e0-4165-be67-1a198ff38d48",
    "metadata": {},
@@ -697,9 +658,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1daac0ae-0fff-43a8-a5a9-7891da2d0e69",
+   "metadata": {},
+   "source": [
+    "#### exp v7: batch mode active learning / random 10 * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "aa55efe2-2a27-4df6-97de-f782e76e099b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.model.supervised_sampling_method': \"'random'\"}\n",
+      "filtered df shape is (3, 84)\n",
+      "filtered df shape is (3, 84)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.34\n",
+      "4                                    0.50\n",
+      "16                                   0.51\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.24\n",
+      "4                                    0.36\n",
+      "16                                   0.29\n"
+     ]
+    }
+   ],
+   "source": [
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v7.json\"\n",
+    "filter_dict = {}\n",
+    "\n",
+    "# s2_beta_vae \n",
+    "index_name = 'train_final_config.s2_vae.beta'\n",
+    "column_name = 'train_final_config.s2_vae.gamma_sup'\n",
+    "filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
+    "df = pd.read_json(aggregated_results_path)\n",
+    "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
+    "for criterion in criteria_names:\n",
+    "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
+    "    print(filter_dict)\n",
+    "    exp_results = aggregate_metric_results(df, index_name, column_name, metric_names, df_filter_dict=filter_dict)\n",
+    "    for metric in metric_names:\n",
+    "        print(f\"metric {metric} results: \\n {exp_results[metric]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d101fef3-f7ae-4922-a6a5-7975cb460f95",
+   "id": "0d84889c-4eae-452b-a73d-870a700cd80c",
    "metadata": {},
    "outputs": [],
    "source": []
