--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -46,7 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "d78f5bb9-d4ff-408e-897a-9621cd0146e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "zeros() missing required argument 'shape' (pos 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-f08d7517924f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: zeros() missing required argument 'shape' (pos 0)"
+     ]
+    }
+   ],
+   "source": [
+    "np.zeros()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "d68dbef4-56dc-4519-91c2-b22f669a2b1a",
    "metadata": {},
    "outputs": [
@@ -78,7 +100,7 @@
        "      <th>s2_vae.beta</th>\n",
        "      <th>s2_vae.gamma_sup</th>\n",
        "      <th>model.model</th>\n",
-       "      <th>model.supervised_selection_criterion</th>\n",
+       "      <th>model.supervised_sampling_method</th>\n",
        "      <th>model.model_seed</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -92,7 +114,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, random]</td>\n",
+       "      <td>random</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -101,10 +123,10 @@
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>[lowest_summed_logvar, random]</td>\n",
+       "      <td>random</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -113,82 +135,10 @@
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, lowest_summed_logvar, ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, random]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[lowest_summed_logvar, random]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, lowest_summed_logvar, ...</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
        "      <td>16.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, random]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[lowest_summed_logvar, random]</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>dsprites_full</td>\n",
-       "      <td>@conv_encoder</td>\n",
-       "      <td>@deconv_decoder</td>\n",
-       "      <td>s2_beta_vae</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>@s2_vae()</td>\n",
-       "      <td>[highest_summed_logvar, lowest_summed_logvar, ...</td>\n",
+       "      <td>random</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -200,37 +150,19 @@
        "0  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "1  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "2  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "3  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "4  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "5  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "6  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "7  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
-       "8  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "\n",
-       "   s2_vae.beta  s2_vae.gamma_sup model.model  \\\n",
-       "0          1.0               1.0   @s2_vae()   \n",
-       "1          1.0               1.0   @s2_vae()   \n",
-       "2          1.0               1.0   @s2_vae()   \n",
-       "3          4.0               1.0   @s2_vae()   \n",
-       "4          4.0               1.0   @s2_vae()   \n",
-       "5          4.0               1.0   @s2_vae()   \n",
-       "6         16.0               1.0   @s2_vae()   \n",
-       "7         16.0               1.0   @s2_vae()   \n",
-       "8         16.0               1.0   @s2_vae()   \n",
+       "   s2_vae.beta  s2_vae.gamma_sup model.model model.supervised_sampling_method  \\\n",
+       "0          1.0               1.0   @s2_vae()                           random   \n",
+       "1          4.0               1.0   @s2_vae()                           random   \n",
+       "2         16.0               1.0   @s2_vae()                           random   \n",
        "\n",
-       "                model.supervised_selection_criterion  model.model_seed  \n",
-       "0                    [highest_summed_logvar, random]                 0  \n",
-       "1                     [lowest_summed_logvar, random]                 0  \n",
-       "2  [highest_summed_logvar, lowest_summed_logvar, ...                 0  \n",
-       "3                    [highest_summed_logvar, random]                 0  \n",
-       "4                     [lowest_summed_logvar, random]                 0  \n",
-       "5  [highest_summed_logvar, lowest_summed_logvar, ...                 0  \n",
-       "6                    [highest_summed_logvar, random]                 0  \n",
-       "7                     [lowest_summed_logvar, random]                 0  \n",
-       "8  [highest_summed_logvar, lowest_summed_logvar, ...                 0  "
+       "   model.model_seed  \n",
+       "0                 0  \n",
+       "1                 0  \n",
+       "2                 0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +172,7 @@
     "\n",
     "# from disentanglement_lib.config.unsupervised_study_v1.sweep import get_config\n",
     "# from disentanglement_lib.config.double_descent_study_v10.sweep import get_config\n",
-    "from disentanglement_lib.config.active_learning_study_v6.sweep import get_config\n",
+    "from disentanglement_lib.config.active_learning_study_v7.sweep import get_config\n",
     "\n",
     "\n",
     "import pandas as pd\n",
