can run till exp v8 on server

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -662,12 +662,12 @@
    "id": "1daac0ae-0fff-43a8-a5a9-7891da2d0e69",
    "metadata": {},
    "source": [
-    "#### exp v7: batch mode active learning / random 10 * 100"
+    "#### exp v7 + v8: batch mode active learning / (random 10 * 100, highest_summed_logvar, highest_summed_logvar_all_dims)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "id": "aa55efe2-2a27-4df6-97de-f782e76e099b",
    "metadata": {},
    "outputs": [
@@ -689,20 +689,54 @@
       "train_final_config.s2_vae.beta           \n",
       "1                                    0.24\n",
       "4                                    0.36\n",
-      "16                                   0.29\n"
+      "16                                   0.29\n",
+      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.model.supervised_sampling_method': \"'highest_summed_logvar_all_dims'\"}\n",
+      "filtered df shape is (3, 84)\n",
+      "filtered df shape is (3, 84)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.26\n",
+      "4                                    0.48\n",
+      "16                                   0.49\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.17\n",
+      "4                                    0.35\n",
+      "16                                   0.30\n",
+      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.model.supervised_sampling_method': \"'highest_summed_logvar'\"}\n",
+      "filtered df shape is (3, 84)\n",
+      "filtered df shape is (3, 84)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.27\n",
+      "4                                    0.49\n",
+      "16                                   0.49\n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.s2_vae.gamma_sup     1\n",
+      "train_final_config.s2_vae.beta           \n",
+      "1                                    0.16\n",
+      "4                                    0.36\n",
+      "16                                   0.30\n"
      ]
     }
    ],
    "source": [
     "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
     "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v7.json\"\n",
+    "df1 = pd.read_json(aggregated_results_path)\n",
+    "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v8.json\"\n",
+    "df2 = pd.read_json(aggregated_results_path)\n",
+    "df = pd.concat([df1, df2])\n",
     "filter_dict = {}\n",
     "\n",
     "# s2_beta_vae \n",
     "index_name = 'train_final_config.s2_vae.beta'\n",
     "column_name = 'train_final_config.s2_vae.gamma_sup'\n",
     "filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
-    "df = pd.read_json(aggregated_results_path)\n",
+    "\n",
     "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
     "for criterion in criteria_names:\n",
     "    filter_dict[\"train_final_config.model.supervised_sampling_method\"] = criterion\n",
