--- a/notebooks/dataset_creation.ipynb
+++ b/notebooks/dataset_creation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0d6bfcd4-d65a-4cd6-9d92-ef804db27fba",
    "metadata": {},
    "outputs": [],
@@ -46,29 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d78f5bb9-d4ff-408e-897a-9621cd0146e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "zeros() missing required argument 'shape' (pos 0)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-f08d7517924f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: zeros() missing required argument 'shape' (pos 0)"
-     ]
-    }
-   ],
-   "source": [
-    "np.zeros()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "d68dbef4-56dc-4519-91c2-b22f669a2b1a",
    "metadata": {},
    "outputs": [
@@ -114,7 +92,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>random</td>\n",
+       "      <td>highest_summed_logvar</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -123,10 +101,10 @@
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
-       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>random</td>\n",
+       "      <td>highest_summed_logvar_alldims</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -135,10 +113,46 @@
        "      <td>@conv_encoder</td>\n",
        "      <td>@deconv_decoder</td>\n",
        "      <td>s2_beta_vae</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>@s2_vae()</td>\n",
+       "      <td>highest_summed_logvar</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dsprites_full</td>\n",
+       "      <td>@conv_encoder</td>\n",
+       "      <td>@deconv_decoder</td>\n",
+       "      <td>s2_beta_vae</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>@s2_vae()</td>\n",
+       "      <td>highest_summed_logvar_alldims</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dsprites_full</td>\n",
+       "      <td>@conv_encoder</td>\n",
+       "      <td>@deconv_decoder</td>\n",
+       "      <td>s2_beta_vae</td>\n",
        "      <td>16.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>@s2_vae()</td>\n",
-       "      <td>random</td>\n",
+       "      <td>highest_summed_logvar</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>dsprites_full</td>\n",
+       "      <td>@conv_encoder</td>\n",
+       "      <td>@deconv_decoder</td>\n",
+       "      <td>s2_beta_vae</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>@s2_vae()</td>\n",
+       "      <td>highest_summed_logvar_alldims</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -150,19 +164,28 @@
        "0  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "1  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "2  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
+       "3  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
+       "4  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
+       "5  dsprites_full      @conv_encoder    @deconv_decoder  s2_beta_vae   \n",
        "\n",
        "   s2_vae.beta  s2_vae.gamma_sup model.model model.supervised_sampling_method  \\\n",
-       "0          1.0               1.0   @s2_vae()                           random   \n",
-       "1          4.0               1.0   @s2_vae()                           random   \n",
-       "2         16.0               1.0   @s2_vae()                           random   \n",
+       "0          1.0               1.0   @s2_vae()            highest_summed_logvar   \n",
+       "1          1.0               1.0   @s2_vae()    highest_summed_logvar_alldims   \n",
+       "2          4.0               1.0   @s2_vae()            highest_summed_logvar   \n",
+       "3          4.0               1.0   @s2_vae()    highest_summed_logvar_alldims   \n",
+       "4         16.0               1.0   @s2_vae()            highest_summed_logvar   \n",
+       "5         16.0               1.0   @s2_vae()    highest_summed_logvar_alldims   \n",
        "\n",
        "   model.model_seed  \n",
        "0                 0  \n",
        "1                 0  \n",
-       "2                 0  "
+       "2                 0  \n",
+       "3                 0  \n",
+       "4                 0  \n",
+       "5                 0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +195,7 @@
     "\n",
     "# from disentanglement_lib.config.unsupervised_study_v1.sweep import get_config\n",
     "# from disentanglement_lib.config.double_descent_study_v10.sweep import get_config\n",
-    "from disentanglement_lib.config.active_learning_study_v7.sweep import get_config\n",
+    "from disentanglement_lib.config.active_learning_study_v8.sweep import get_config\n",
     "\n",
     "\n",
     "import pandas as pd\n",
@@ -190,6 +213,62 @@
     "\n",
     "# Give the list of model ids with this configuration\n",
     "df[dataset].head(200)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "abb2fb09-9b18-4d31-aced-26234a1d5756",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gg = np.zeros((5, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c107659a-3680-4793-8a7d-fda6d1e1edb7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.],\n",
+       "       [0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "286d1496-a08d-45c8-bd4b-9fe322e03f6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0., 0., 0., 0.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.mean(gg, 1)"
    ]
   },
   {
