fix bug on unlabelled index set

--- a/notebooks/aggregate_metric_semi_supervised.ipynb
+++ b/notebooks/aggregate_metric_semi_supervised.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "05ce4786-0b24-4b9b-9cdf-3dfd40ae8aee",
    "metadata": {},
    "outputs": [],
@@ -704,103 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9ef67866-8567-42f7-9820-87262c05aa07",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['postprocess_results.elapsed_time', 'postprocess_results.uuid',\n",
-       "       'evaluation_config.correlation.active_correlation',\n",
-       "       'evaluation_config.dataset.name',\n",
-       "       'evaluation_config.dataset.num_training_data',\n",
-       "       'evaluation_config.dataset.split_method',\n",
-       "       'evaluation_config.dataset.train_with_full_dataset',\n",
-       "       'evaluation_config.dci.batch_size', 'evaluation_config.dci.num_test',\n",
-       "       'evaluation_config.dci.num_train',\n",
-       "       'evaluation_config.evaluation.evaluation_fn',\n",
-       "       'evaluation_config.evaluation.name',\n",
-       "       'evaluation_config.evaluation.random_seed',\n",
-       "       'train_final_config.vae/AdamOptimizer.beta1',\n",
-       "       'train_final_config.vae/AdamOptimizer.beta2',\n",
-       "       'train_final_config.vae/AdamOptimizer.epsilon',\n",
-       "       'train_final_config.vae/AdamOptimizer.learning_rate',\n",
-       "       'train_final_config.vae/AdamOptimizer.name',\n",
-       "       'train_final_config.vae/AdamOptimizer.use_locking',\n",
-       "       'train_final_config.annealer.anneal_fn',\n",
-       "       'train_final_config.annealer.iteration_threshold',\n",
-       "       'train_final_config.bernoulli_loss.subtract_true_image_entropy',\n",
-       "       'train_final_config.conv_encoder_dropout.dropout_rate',\n",
-       "       'train_final_config.conv_encoder_dropout.num_parameters_scale',\n",
-       "       'train_final_config.correlation.active_correlation',\n",
-       "       'train_final_config.dataset.name',\n",
-       "       'train_final_config.dataset.num_training_data',\n",
-       "       'train_final_config.dataset.split_method',\n",
-       "       'train_final_config.dataset.train_with_full_dataset',\n",
-       "       'train_final_config.decoder.decoder_fn',\n",
-       "       'train_final_config.deconv_decoder.num_parameters_scale',\n",
-       "       'train_final_config.encoder.encoder_fn',\n",
-       "       'train_final_config.encoder.num_latent',\n",
-       "       'train_final_config.export_as_tf_hub.drop_collections',\n",
-       "       'train_final_config.labeller.labeller_fn',\n",
-       "       'train_final_config.model.batch_size', 'train_final_config.model.model',\n",
-       "       'train_final_config.model.model_num',\n",
-       "       'train_final_config.model.model_seed', 'train_final_config.model.name',\n",
-       "       'train_final_config.model.num_checkpoints',\n",
-       "       'train_final_config.model.num_labelled_samples',\n",
-       "       'train_final_config.model.supervised_batch_size',\n",
-       "       'train_final_config.model.supervised_data_seed',\n",
-       "       'train_final_config.model.supervised_sampling_method',\n",
-       "       'train_final_config.model.train_percentage',\n",
-       "       'train_final_config.model.training_steps',\n",
-       "       'train_final_config.model.uncertainty_method',\n",
-       "       'train_final_config.model.unsupervised_data_seed',\n",
-       "       'train_final_config.reconstruction_loss.activation',\n",
-       "       'train_final_config.reconstruction_loss.loss_fn',\n",
-       "       'train_final_config.s2_vae.beta',\n",
-       "       'train_final_config.s2_vae.factor_sizes',\n",
-       "       'train_final_config.s2_vae.gamma_sup',\n",
-       "       'train_final_config.s2_vae.num_stochastic_passes',\n",
-       "       'train_final_config.supervised_loss.loss_fn',\n",
-       "       'train_final_config.vae_optimizer.learning_rate',\n",
-       "       'train_final_config.vae_optimizer.optimizer_fn',\n",
-       "       'train_final_results.elbo', 'train_final_results.kl_loss',\n",
-       "       'train_final_results.loss', 'train_final_results.reconstruction_loss',\n",
-       "       'train_final_results.regularizer',\n",
-       "       'train_final_results.supervised_loss',\n",
-       "       'train_final_results.global_step', 'train_final_results.elapsed_time',\n",
-       "       'train_final_results.uuid', 'evaluation_results.informativeness_train',\n",
-       "       'evaluation_results.informativeness_test',\n",
-       "       'evaluation_results.disentanglement', 'evaluation_results.completeness',\n",
-       "       'evaluation_results.elapsed_time', 'evaluation_results.uuid',\n",
-       "       'postprocess_config.correlation.active_correlation',\n",
-       "       'postprocess_config.dataset.name',\n",
-       "       'postprocess_config.dataset.num_training_data',\n",
-       "       'postprocess_config.dataset.split_method',\n",
-       "       'postprocess_config.dataset.train_with_full_dataset',\n",
-       "       'postprocess_config.postprocess.name',\n",
-       "       'postprocess_config.postprocess.postprocess_fn',\n",
-       "       'postprocess_config.postprocess.random_seed', 'path',\n",
-       "       'evaluation_config.discretizer.discretizer_fn',\n",
-       "       'evaluation_config.discretizer.num_bins',\n",
-       "       'evaluation_config.mig.batch_size', 'evaluation_config.mig.num_train',\n",
-       "       'evaluation_results.discrete_mig'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "id": "aa55efe2-2a27-4df6-97de-f782e76e099b",
    "metadata": {},
    "outputs": [
@@ -808,90 +712,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.num_stochastic_passes': 32, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty_all_dims'\"}\n",
-      "filtered df shape is (20, 87)\n",
-      "filtered df shape is (20, 87)\n",
-      "filtered df shape is (20, 87)\n",
-      "metric train_final_results.loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate     0.1     0.2     0.3  \\\n",
-      "train_final_config.s2_vae.beta                                                 \n",
-      "1                                                     187.76  225.60  250.86   \n",
-      "16                                                    388.11  375.14  383.46   \n",
+      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.beta': 16, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty'\"}\n",
+      "filtered df shape is (10, 87)\n",
+      "filtered df shape is (10, 87)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1   0.2   0.3   0.4  \\\n",
+      "train_final_config.s2_vae.num_stochastic_passes                                \n",
+      "8                                                     0.45  0.43  0.41  0.39   \n",
+      "32                                                    0.46  0.43  0.41  0.38   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate     0.4     0.5  \n",
-      "train_final_config.s2_vae.beta                                        \n",
-      "1                                                     261.60  292.10  \n",
-      "16                                                    384.25  391.67  \n",
-      "metric train_final_results.supervised_loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate     0.1     0.2     0.3  \\\n",
-      "train_final_config.s2_vae.beta                                                 \n",
-      "1                                                     126.09  156.01  172.60   \n",
-      "16                                                    163.75  147.28  153.56   \n",
+      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
+      "train_final_config.s2_vae.num_stochastic_passes             \n",
+      "8                                                     0.38  \n",
+      "32                                                    0.38  \n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate  0.1   0.2   0.3   0.4  \\\n",
+      "train_final_config.s2_vae.num_stochastic_passes                               \n",
+      "8                                                     0.3  0.27  0.26  0.25   \n",
+      "32                                                    0.3  0.27  0.27  0.27   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate     0.4     0.5  \n",
-      "train_final_config.s2_vae.beta                                        \n",
-      "1                                                     169.94  186.83  \n",
-      "16                                                    150.86  156.31  \n",
-      "metric train_final_results.kl_loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate    0.1    0.2    0.3  \\\n",
-      "train_final_config.s2_vae.beta                                              \n",
-      "1                                                     24.13  22.91  20.73   \n",
-      "16                                                     5.82   5.78   5.69   \n",
+      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
+      "train_final_config.s2_vae.num_stochastic_passes             \n",
+      "8                                                     0.25  \n",
+      "32                                                    0.26  \n",
+      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.beta': 16, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty_all_dims'\"}\n",
+      "filtered df shape is (10, 87)\n",
+      "filtered df shape is (10, 87)\n",
+      "metric evaluation_results.disentanglement results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate   0.1   0.2   0.3   0.4  \\\n",
+      "train_final_config.s2_vae.num_stochastic_passes                                \n",
+      "8                                                     0.45  0.44  0.41  0.40   \n",
+      "32                                                    0.46  0.43  0.41  0.39   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate    0.4    0.5  \n",
-      "train_final_config.s2_vae.beta                                      \n",
-      "1                                                     18.98  16.29  \n",
-      "16                                                     5.61   5.49  \n",
-      "{'train_final_config.model.name': \"'s2_beta_vae'\", 'train_final_config.s2_vae.num_stochastic_passes': 32, 'train_final_config.model.supervised_sampling_method': \"'highest_summed_uncertainty'\"}\n",
-      "filtered df shape is (20, 87)\n",
-      "filtered df shape is (20, 87)\n",
-      "filtered df shape is (20, 87)\n",
-      "metric train_final_results.loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate     0.1     0.2     0.3  \\\n",
-      "train_final_config.s2_vae.beta                                                 \n",
-      "1                                                     198.50  213.85  232.80   \n",
-      "16                                                    376.53  376.13  387.31   \n",
+      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
+      "train_final_config.s2_vae.num_stochastic_passes             \n",
+      "8                                                     0.38  \n",
+      "32                                                    0.38  \n",
+      "metric evaluation_results.discrete_mig results: \n",
+      " train_final_config.conv_encoder_dropout.dropout_rate  0.1   0.2   0.3   0.4  \\\n",
+      "train_final_config.s2_vae.num_stochastic_passes                               \n",
+      "8                                                     0.3  0.27  0.26  0.28   \n",
+      "32                                                    0.3  0.25  0.25  0.26   \n",
       "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate     0.4     0.5  \n",
-      "train_final_config.s2_vae.beta                                        \n",
-      "1                                                     228.09  282.14  \n",
-      "16                                                    377.48  386.34  \n",
-      "metric train_final_results.supervised_loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate     0.1     0.2    0.3  \\\n",
-      "train_final_config.s2_vae.beta                                                \n",
-      "1                                                     136.05  143.68  153.8   \n",
-      "16                                                    152.07  148.21  157.1   \n",
-      "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate     0.4     0.5  \n",
-      "train_final_config.s2_vae.beta                                        \n",
-      "1                                                     136.43  174.55  \n",
-      "16                                                    143.82  150.51  \n",
-      "metric train_final_results.kl_loss results: \n",
-      " train_final_config.conv_encoder_dropout.dropout_rate    0.1    0.2    0.3  \\\n",
-      "train_final_config.s2_vae.beta                                              \n",
-      "1                                                     24.17  23.16  21.16   \n",
-      "16                                                     5.87   5.82   5.72   \n",
-      "\n",
-      "train_final_config.conv_encoder_dropout.dropout_rate    0.4    0.5  \n",
-      "train_final_config.s2_vae.beta                                      \n",
-      "1                                                     19.24  15.86  \n",
-      "16                                                     5.62   5.50  \n"
+      "train_final_config.conv_encoder_dropout.dropout_rate   0.5  \n",
+      "train_final_config.s2_vae.num_stochastic_passes             \n",
+      "8                                                     0.24  \n",
+      "32                                                    0.24  \n"
      ]
     }
    ],
    "source": [
-    "# metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
-    "metric_names = ['train_final_results.loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
+    "metric_names = ['evaluation_results.disentanglement', 'evaluation_results.discrete_mig']\n",
+    "# metric_names = ['train_final_results.loss', 'train_final_results.supervised_loss', 'train_final_results.kl_loss']\n",
     "aggregated_results_path = \"/home/mwu34/disentanglement_lib/results_semi_mean_v7.json\"\n",
     "df = pd.read_json(aggregated_results_path)\n",
     "\n",
     "filter_dict = {}\n",
     "\n",
     "# s2_beta_vae \n",
-    "index_name = 'train_final_config.s2_vae.beta'\n",
+    "index_name = 'train_final_config.s2_vae.num_stochastic_passes'\n",
     "column_name = 'train_final_config.conv_encoder_dropout.dropout_rate'\n",
     "filter_dict[\"train_final_config.model.name\"] = \"'s2_beta_vae'\"\n",
-    "filter_dict[\"train_final_config.s2_vae.num_stochastic_passes\"] = 32\n",
+    "filter_dict[\"train_final_config.s2_vae.beta\"] = 16\n",
     "\n",
     "\n",
     "criteria_names = df[\"train_final_config.model.supervised_sampling_method\"].unique()\n",
